...
    case sonarCloud

    var id: Self { self }
    var description: String {
        switch self {
        case .sonarQube:
            "Sonar Qube"
        case .sonarCloud:
            "Sonar Cloud"
        }
    }

    var metatype: SonarUserDefaults.Type {
...
